Pagina sobre nos

--- a/sobre nos.html
+++ b/sobre nos.html
@@ -6,9 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Página Home</h1>
-    <a href="vendas.html">Ir para a página de vendas</a>
-    <h2>Sobre Nós</h2>
-    <a href="sobre nos.html">Conheça a gente!</a>
+    <h1>Sobre Nós</h1>
+    <p>Somos uma empresa de vendas</p>
+    <a href="index.html">Voltar para a página inicial</a>
 </body>
 </html>
